[package]
name = "rust-lib-ffi"
version = "0.1.0"
authors = ["Gero Posmyk-Leinemann <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-lib = { path = "../rust-lib" }

# ffi
libc = "0.2.2"

# misc
chrono = { version = "0.4.13", default-features = false }