[package]
name = "rust-lib-wasm"
version = "0.1.0"
authors = ["Gero Posmyk-Leinemann <gero.posmyk-leinemann@typefox.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# Fix for https://github.com/rustwasm/wasm-pack/issues/886 copied from https://github.com/rustwasm/wasm-pack/issues/886#issuecomment-667669802
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]

[dependencies]
rust-lib = { path = "../rust-lib", default-features = false }

# wasm and nodejs
wasm-bindgen = "0.2.67"
js-sys = "0.3.41"

# error handling
anyhow = "1.0.32"

# misc
chrono = { version = "0.4.13", default-features = false, features = ["serde"] }